resume updates, start of portfolio updates

--- a/index.html
+++ b/index.html
@@ -149,41 +149,63 @@
 
 <div id="portfolio">
 	<div id='portfolioheader'><h1>Portfolio and Projects</h1></div>
-	<!-- <div class="filter-container isotopeFilters2">
-	    <ul class="list-inline filter">
-	        <li class="active"><a href="#" data-filter="*">All </a><span>/</span></li>
-	        <li><a href="#" data-filter=".illustrations">Illustrations</a><span>/</span></li>
-	        <li><a href="#" data-filter=".photography">Photography</a><span>/</span></li>
-	        <li><a href="#" data-filter=".websites">Websites</a><span>/</span></li>
-	        <li><a href="#" data-filter=".art">Art</a></li>
-	    </ul>
-	</div>
+	<nav class="primary"> 
+		    <ul> 
+		        <li><a href="#" class="selected" data-filter="*">All</a></li> 
+		        <li><a href="#" data-filter=".club">Club/Organization</a></li> 
+		        <li><a href="#" data-filter=".personal">Personal Project</a></li> 
+		        <li><a href="#" data-filter=".school">Schoolwork</a></li> 
+		        <li><a href="#" data-filter=".work">Internship Project</a></li> 
+		    </ul> 
+		</nav>
+	<div class="portfolio">
+		
+        <figure class="entry club">
+        	<a href="anabels.html">
+            <img src="portfolio_assets/Anabels/cover.png" alt="Anabels"> 
+            <span class="hover"></span>
+            <figcaption>Anabel's Grocery</figcaption>
+            </a>
+        </figure> 
 
-	<div class="isotopeContainer">
+        <figure class="entry club"> 
+       		<a href="pit.html">
+            <img src="portfolio_assets/PIT/cover.png" alt="PIT"> 
+            <span class="hover"></span>
+            <figcaption>Professor In Touch</figcaption>
+            </a>
+        </figure>
 
-		<div class="col-3 isotopeSelector art">
-		    <article class="">
-		        <figure>
-		            <img src="images/portfolio/22.jpg" alt="">
-		            <div class="overlay-background">
-		                <div class="inner"></div>
-		            </div>
-		            <div class="overlay">
-		                <div class="inner-overlay">
-		                    <div class="inner-overlay-content with-icons">
-		                        <a title="First Image" class="fancybox-pop" rel="portfolio-22" href="images/portfolio/22.jpg"><i class="fa fa-search"></i></a>
-		                        <a title="Second Image"  class="fancybox-pop" style="display: none" href="images/portfolio/17.jpg" rel="portfolio-22"></a>
-		                        <a title="Third Image"  class="fancybox-pop" style="display: none" href="images/portfolio/18.jpg" rel="portfolio-22"></a>
-		                        <a href="#"><i class="fa fa-link"></i></a>
-		                    </div>
-		                </div>
-		            </div>
-		        </figure>
-		        <div class="article-title"><a href="#">Nipperkin run</a></div>
-		    </article>
-		</div>	
+        <figure class="entry personal"> 
+            <img src="portfolio_assets/Senator/cover.png" alt="Senator"> 
+            <span class="hover"></span>
+            <figcaption>EmailMySenator</figcaption>
+        </figure>  
 
-	</div> -->
+        <figure class="entry school"> 
+            <img src="portfolio_assets/DDS/cover.png" alt="DDS"> 
+            <span class="hover"></span>
+            <figcaption>Data, Design, and Society</figcaption>
+        </figure> 
+
+        <figure class="entry personal"> 
+            <img src="portfolio_assets/DailyUI/cover.png" alt="DailyUI"> 
+            <span class="hover"></span>
+            <figcaption>DailyUI</figcaption>
+        </figure> 
+
+        <figure class="entry work"> 
+            <img src="portfolio_assets/WLE/cover.png" alt="WLE"> 
+            <span class="hover"></span>
+            <figcaption>Women's Leadership Event</figcaption>
+        </figure>   
+
+        <figure class="entry work"> 
+            <img src="portfolio_assets/SeatPlan/cover.png" alt="seatplan"> 
+            <span class="hover"></span>
+            <figcaption>Seating Reservation System</figcaption>
+        </figure>     
+    </div> 
 
 </div>
 
