more portfolio files

--- a/index.html
+++ b/index.html
@@ -177,21 +177,27 @@
         </figure>
 
         <figure class="entry personal"> 
+        	<a href="senator.html">
             <img src="portfolio_assets/Senator/cover.png" alt="Senator"> 
             <span class="hover"></span>
             <figcaption>EmailMySenator</figcaption>
+            </a>
         </figure>  
 
         <figure class="entry school"> 
+        	<a href="dds.html">
             <img src="portfolio_assets/DDS/cover.png" alt="DDS"> 
             <span class="hover"></span>
             <figcaption>Data, Design, and Society</figcaption>
+            </a>
         </figure> 
 
         <figure class="entry personal"> 
+        	<a href="dailyui.html">
             <img src="portfolio_assets/DailyUI/cover.png" alt="DailyUI"> 
             <span class="hover"></span>
             <figcaption>DailyUI</figcaption>
+            </a>
         </figure> 
 
         <figure class="entry work"> 
@@ -201,9 +207,11 @@
         </figure>   
 
         <figure class="entry work"> 
+        	<a href="seatplan.html">
             <img src="portfolio_assets/SeatPlan/cover.png" alt="seatplan"> 
             <span class="hover"></span>
             <figcaption>Seating Reservation System</figcaption>
+            </a>
         </figure>     
     </div> 
 
