--- a/index.html
+++ b/index.html
@@ -201,9 +201,11 @@
         </figure> 
 
         <figure class="entry work"> 
+        	<a href="wle.html">
             <img src="portfolio_assets/WLE/cover.png" alt="WLE"> 
             <span class="hover"></span>
             <figcaption>Women's Leadership Event</figcaption>
+            </a>
         </figure>   
 
         <figure class="entry work"> 
