--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="js/smoothscroll.js"></script>
 	<script src="js/scrolltofixed.js"></script>
 	<script src="js/filterable.js"></script>
+	<script src="js/imagesloaded.js"></script>
 	<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.js"></script>
 
 	<!-- Add fancyBox -->
@@ -70,7 +71,8 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'>Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span>; Human Computer Interaction Design (Fall 2016); Introduction to Rapid Prototyping (Fall 2016); Law of Internet and E-Commerce (Fall 2016); Machine Learning for Data Science (Fall 2016)<br><br><span class="blue">***</span> Taken at the University of Edinburgh, Spring 2016
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'><!-- Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span>; Human Computer Interaction Design (Fall 2016); Introduction to Rapid Prototyping (Fall 2016); Law of Internet and E-Commerce (Fall 2016); Machine Learning for Data Science (Fall 2016)<br><br><span class="blue">***</span> Taken at the University of Edinburgh, Spring 2016 -->
+		My favorite classes have been in web development, object oriented programming, pyschology and sociology of computing, artificial intelligence, networks, human computer interaction design (fall 2016), machine learning (fall 2016), and rapid prototyping (fall 2016).
 	</p>
 </div>
 </div>
@@ -162,7 +164,7 @@
 		
         <figure class="entry club">
         	<a href="anabels.html">
-            <img src="portfolio_assets/Anabels/cover.png" alt="Anabels"> 
+            <img height="210" src="portfolio_assets/Anabels/cover.png" alt="Anabels"> 
             <span class="hover"></span>
             <figcaption>Anabel's Grocery</figcaption>
             </a>
@@ -170,7 +172,7 @@
 
         <figure class="entry club"> 
        		<a href="pit.html">
-            <img src="portfolio_assets/PIT/cover.png" alt="PIT"> 
+            <img height="210" src="portfolio_assets/PIT/cover.png" alt="PIT"> 
             <span class="hover"></span>
             <figcaption>Professor In Touch</figcaption>
             </a>
@@ -178,7 +180,7 @@
 
         <figure class="entry personal"> 
         	<a href="senator.html">
-            <img src="portfolio_assets/Senator/cover.png" alt="Senator"> 
+            <img height="210" src="portfolio_assets/Senator/cover.png" alt="Senator"> 
             <span class="hover"></span>
             <figcaption>EmailMySenator</figcaption>
             </a>
@@ -186,7 +188,7 @@
 
         <figure class="entry school"> 
         	<a href="dds.html">
-            <img src="portfolio_assets/DDS/cover.png" alt="DDS"> 
+            <img height="210" src="portfolio_assets/DDS/cover.png" alt="DDS"> 
             <span class="hover"></span>
             <figcaption>Data, Design, and Society</figcaption>
             </a>
@@ -194,7 +196,7 @@
 
         <figure class="entry personal"> 
         	<a href="dailyui.html">
-            <img src="portfolio_assets/DailyUI/cover.png" alt="DailyUI"> 
+            <img height="210" src="portfolio_assets/DailyUI/cover.png" alt="DailyUI"> 
             <span class="hover"></span>
             <figcaption>DailyUI</figcaption>
             </a>
@@ -202,7 +204,7 @@
 
         <figure class="entry work"> 
         	<a href="wle.html">
-            <img src="portfolio_assets/WLE/cover.png" alt="WLE"> 
+            <img height="210" src="portfolio_assets/WLE/cover.png" alt="WLE"> 
             <span class="hover"></span>
             <figcaption>Women's Leadership Event</figcaption>
             </a>
@@ -210,7 +212,7 @@
 
         <figure class="entry work"> 
         	<a href="seatplan.html">
-            <img src="portfolio_assets/SeatPlan/cover.png" alt="seatplan"> 
+            <img height="210" src="portfolio_assets/SeatPlan/cover.png" alt="seatplan"> 
             <span class="hover"></span>
             <figcaption>Seating Reservation System</figcaption>
             </a>
