changed portfolio filters, changed description of me

--- a/index.html
+++ b/index.html
@@ -49,19 +49,9 @@
 </div>
 <a href="#bio"><button id="learnmore">Learn More</button></a> 
 
-<div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I am a senior at Cornell University, studying Information Science, Systems, and Technology at Cornell's College of Engineering. I grew up in Rye Brook, New York, located in Westchester County.<br>On campus, I am:</p>
-	<ul>
-		<li>a member of the Big Red Marching Band Clarinet Section</li>
-		<li>on the IT Team for Anabel's Grocery, a student-run grocery store</li>
-		<li>a member of Phi Sigma Pi, a national honors fraternity</li>
-	</ul>
-	<p>In the past, I have been:</p>
-	<ul>
-		<li>a Teaching Assistant for INFO 1300</li>
-		<li>the Historian and Parliamentarian for Phi Sigma Pi</li>
-		<li>a research assistant for the Reimagination Lab (Department of Information Science)</li>
-	</ul>
-	<p>In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, write and read articles on Medium, and listen to poetry on YouTube.<br><br><span class="pink">I designed and coded this website from scratch, using HTML, CSS, JavaScript, and JQuery.</span></p>
+<div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p><span class="bigger">Hi, I'm Julia!</span><br><br> I'm a creative technologist who's passionate about using technology to drive social change. I have experience in UX/UI design, web development, and user research. I'm a team player who always strives for excellence, and I'm perpetually curious about this amazing world we live in. I belive that great technology is just like magic and can be used to build anything we can imagine.<br><br>
+
+	In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, write and read articles on Medium, and listen to poetry on YouTube.</p>
 </div>
 
 <div id="school" data-stellar-background-ratio="0.5">
@@ -154,15 +144,15 @@
 	<nav class="primary"> 
 		    <ul> 
 		        <li><a href="#" class="selected" data-filter="*">All</a></li> 
-		        <li><a href="#" data-filter=".club">Club/Organization</a></li> 
-		        <li><a href="#" data-filter=".personal">Personal Project</a></li> 
-		        <li><a href="#" data-filter=".school">Schoolwork</a></li> 
-		        <li><a href="#" data-filter=".work">Internship Project</a></li> 
+		        <li><a href="#" data-filter=".ur">User Research</a></li> 
+		        <li><a href="#" data-filter=".design">Design</a></li> 
+		        <li><a href="#" data-filter=".dev">Development</a></li> 
+		        <li><a href="#" data-filter=".pm">Project Management</a></li> 
 		    </ul> 
 		</nav>
 	<div class="portfolio">
 		
-        <figure class="entry club">
+        <figure class="entry ur design dev pm">
         	<a href="anabels.html">
             <img height="210" src="portfolio_assets/Anabels/cover.png" alt="Anabels"> 
             <span class="hover"></span>
@@ -170,7 +160,7 @@
             </a>
         </figure> 
 
-        <figure class="entry club"> 
+        <figure class="entry dev"> 
        		<a href="pit.html">
             <img height="210" src="portfolio_assets/PIT/cover.png" alt="PIT"> 
             <span class="hover"></span>
@@ -178,7 +168,7 @@
             </a>
         </figure>
 
-        <figure class="entry personal"> 
+        <figure class="entry ur design dev"> 
         	<a href="senator.html">
             <img height="210" src="portfolio_assets/Senator/cover.png" alt="Senator"> 
             <span class="hover"></span>
@@ -186,7 +176,7 @@
             </a>
         </figure>  
 
-        <figure class="entry school"> 
+        <figure class="entry ur design dev pm"> 
         	<a href="dds.html">
             <img height="210" src="portfolio_assets/DDS/cover.png" alt="DDS"> 
             <span class="hover"></span>
@@ -194,7 +184,7 @@
             </a>
         </figure> 
 
-        <figure class="entry personal"> 
+        <figure class="entry design"> 
         	<a href="dailyui.html">
             <img height="210" src="portfolio_assets/DailyUI/cover.png" alt="DailyUI"> 
             <span class="hover"></span>
@@ -202,7 +192,7 @@
             </a>
         </figure> 
 
-        <figure class="entry work"> 
+        <figure class="entry design"> 
         	<a href="wle.html">
             <img height="210" src="portfolio_assets/WLE/cover.png" alt="WLE"> 
             <span class="hover"></span>
@@ -210,7 +200,7 @@
             </a>
         </figure>   
 
-        <figure class="entry work"> 
+        <figure class="entry ur design dev pm"> 
         	<a href="seatplan.html">
             <img height="210" src="portfolio_assets/SeatPlan/cover.png" alt="seatplan"> 
             <span class="hover"></span>
