--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
 
 <div id="aboutme" data-stellar-background-ratio="0.5">
 	<div class="inner" data-stellar-ratio="1.5">
-		<h1><span class='bold name'>Julia Joseph</span><br><br><span class='italics'>student, engineer, artist</span></h1>
+		<h1><span class='bold name'>Hi, I'm Julia</span><br><br><span class='italics'>I like to create cool things.</span></h1>
 		<p></p>
 	</div>
 </div>
-<a href="#bio"><button id="learnmore">Learn More</button></a> 
+<a href="#portfolio"><button id="learnmore">My Portfolio</button></a> 
 
-<div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p><span class="bigger">Hi, I'm Julia!</span><br><br> I'm a creative technologist who's passionate about using technology to drive social change. I have experience in UX/UI design, web development, and user research. I'm a team player who always strives for excellence, and I'm perpetually curious about this amazing world we live in. I belive that great technology is just like magic and can be used to build anything we can imagine.<br><br>
+<div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I'm a creative technologist who's passionate about using technology to drive social change. I have experience in UX/UI design, web development, user research, and project management. I'm a team player who always strives for excellence, and I'm perpetually curious about this amazing world we live in. I belive that great technology is just like magic and can be used to build anything we can imagine.<br><br>
 
-	In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, write and read articles on Medium, and listen to poetry on YouTube.</p>
+I love technology because I love people. I'm a proud ENFP (discover your own personality type <a href="https://www.16personalities.com/free-personality-test" target="_blank">here</a>) who is constantly interested in and amazed by what makes others tick. I like to approach everything I do from a human-centered mindset - above all, I design/code/manage/create for the user.
+
+<br><br>In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, write and read articles on Medium, and listen to poetry on YouTube.</p>
 </div>
 
 <div id="school" data-stellar-background-ratio="0.5">
@@ -61,7 +63,7 @@
 		<strong>Year: </strong>2017<br><br>
 		<strong>College: </strong>Engineering<br><br>
 		<strong>Major: </strong>Information Science, Systems, and Technology<br><br>
-		<strong>Relevant Coursework: </strong><br></p><p class='indent'><!-- Intermediate Web Programming; Object Oriented Programming and Data Structures; Discrete Structures; Basic Engineering Probability and Statistics; Engineering Probability and Statistics II; Optimization; Introduction to Artificial Intelligence; Networks; Networks II; Introduction to Programming with Python; Introduction to Programming with the Web; Communication and Technology; Perception; Computing Cultures; Reasoning and Agents<span class="blue">***</span>; Data, Design, and Society<span class="blue">***</span>; Human Computer Interaction Design (Fall 2016); Introduction to Rapid Prototyping (Fall 2016); Law of Internet and E-Commerce (Fall 2016); Machine Learning for Data Science (Fall 2016)<br><br><span class="blue">***</span> Taken at the University of Edinburgh, Spring 2016 -->
+		<strong>Relevant Coursework: </strong><br></p><p class='indent'>
 		My favorite classes have been in web development, object oriented programming, pyschology and sociology of computing, artificial intelligence, networks, human computer interaction design (fall 2016), machine learning (fall 2016), and rapid prototyping (fall 2016).
 	</p>
 </div>
