clarification to bio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div id="bio"><h1>Who I Am: The Basics</h1><hr class='long' /><p>I'm a creative technologist who's passionate about using technology to drive social change. I have experience in UX/UI design, web development, user research, and project management. I'm a team player who always strives for excellence, and I'm perpetually curious about this amazing world we live in. I belive that great technology is just like magic and can be used to build anything we can imagine.<br><br>
 
-I love technology because I love people. I'm a proud ENFP (discover your own personality type <a href="https://www.16personalities.com/free-personality-test" target="_blank">here</a>) who is constantly interested in and amazed by what makes others tick. I like to approach everything I do from a human-centered mindset - above all, I design/code/manage/create for the user.
+I love technology because I love people. I'm an extrovert, a proud ENFP (discover your own Myers Briggs personality type <a href="https://www.16personalities.com/free-personality-test" target="_blank">here</a>) who is constantly interested in and amazed by what makes others tick. I like to approach everything I do from a human-centered mindset - above all, I design/code/manage/create for the user.
 
 <br><br>In my spare time I like to read, make playlists on Spotify, run, play the ukulele/piano/clarinet, write and read articles on Medium, and listen to poetry on YouTube.</p>
 </div>
