update to seaplane

--- a/seatplan.html
+++ b/seatplan.html
@@ -70,7 +70,7 @@
 
 	<h2>Result</h2>
 	<p>Below you can find a video demo of the reservation system! In this demo I am using two browsers (one on Incognito) in order to demonstrate the real-time functionality.<br><br><br>
-	<span class="padding_link"><video controls><source src="portfolio_assets/SeatPlan/screenvid.mov"></video></span></p>
+	<span class="padding_link"><video controls><source src="portfolio_assets/SeatPlan/viddemo.mp4"></video></span></p>
 </div>
 
 <div id="contact">
